--- a/lectures/lecture-03-python-refresher/lecture-03-python-refresher.ipynb
+++ b/lectures/lecture-03-python-refresher/lecture-03-python-refresher.ipynb
@@ -154,6 +154,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "collapsed": false,
     "scrolled": false,
     "slideshow": {
      "slide_type": "-"
@@ -257,6 +258,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -332,7 +334,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -385,7 +389,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -439,7 +445,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "ZeroDivisionError",
@@ -467,7 +475,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "IndexError",
@@ -496,7 +506,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -532,7 +544,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -616,7 +630,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "IOError",
@@ -693,7 +709,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -763,7 +781,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -840,7 +860,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -891,6 +913,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -991,7 +1014,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1044,7 +1069,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1123,7 +1150,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1226,44 +1255,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
-     "data": {
-      "text/markdown": [
-       "```python\n",
-       "#!/usr/bin/env python\n",
-       "\n",
-       "from calc import Calculator\n",
-       "\n",
-       "def assertAlmostEqual(a, b):\n",
-       "\t\"\"\" A function that tests the approximate equality of two floating point numbers. \"\"\"\n",
-       "\tassert round(a-b, 7) == 0, \"{} is not equal to {}.\".format(a, b)\n",
-       "\n",
-       "c1 = Calculator()\t# Create an instance of a calculator\n",
-       "c2 = Calculator(50)\t# Create another calculator, initialized with 50\n",
-       "\n",
-       "# Test individual methods, and that the two instances properly\n",
-       "# track their own state.\n",
-       "c1.add(2);           assertAlmostEqual(c1.result(), 2)\n",
-       "c1.mul(4);           assertAlmostEqual(c1.result(), 8)\n",
-       "c2.add(50);          assertAlmostEqual(c2.result(), 100)\n",
-       "c1.div(8);           assertAlmostEqual(c1.result(), 1)\n",
-       "c1.sub(-3.);         assertAlmostEqual(c1.result(), 4)\n",
-       "c2.div(c1.result()); assertAlmostEqual(c2.result(), 25)\n",
-       "\n",
-       "print (\"All tests passed! You have a working calculator!\")\n",
-       "\n",
-       "```"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'show_code_listing' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-ca6db85f919a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mshow_code_listing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'test_calc.py'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'show_code_listing' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1279,11 +1285,12 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda env:python2]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-env-python2-py"
   },
   "language_info": {
    "codemirror_mode": {
